# xv4_qa_cost_analysis

./: README.md  cost_per_report.py  list.txt  main.py  pyproject.toml  size_histogram.py  xdoc-counts.csv
report_costs/: 14c120ea-1ea7-4b77-8e3d-c21b0fa9812f.json  35ff9023-d889-481b-a763-aed0b013abdb.json  6073c811-98e4-4a3b-81e9-d2dfe19d12e3.json  87ad09f0-3be8-4d56-8c23-d28428ce4c02.json  a51b20f9-c119-4e61-9216-7d257243b533.json  aae35d26-7fe8-4df4-84a4-a70b72d13886.json  ac81de15-cdc5-469b-8484-3851b213dd9b.json  afeefe8c-c55e-44ac-a0e7-80fdc7d44b00.json  eedb7f01-5552-42a5-b34b-d906d91c03b8.json
report_costs_2/: 057243a7-2f07-4321-8659-35feafb49b08.json  0839c310-58ac-429d-8a30-dd1617352442.json  10915e2d-34e8-40d6-b6a2-544a64930e5c.json  2a9eed89-227c-4b1a-96ec-3f26ca93c4d7.json  2bde547d-b3c7-445a-aa81-f1e5c430ddbb.json  2d80242c-31d3-4722-9204-d081f285c4a8.json  34ace64c-cbf6-4ccb-b46f-d303f2433cce.json  514dccf6-041a-4ac8-a56d-3d617d5c0789.json  53dacc05-6495-4769-b59c-7dc18f8c3a76.json  776669b0-1334-41a9-a22c-1492d2561f9c.json  84d5eb1b-7535-4da0-9294-510ae930bd71.json  88e28c89-7295-4145-8fe3-742588e49124.json  96cf543e-40f5-46cf-b78e-ee1668942279.json  ab9b4c62-75b7-41b1-8ee8-681842aae04b.json  aecf6dd1-dc42-4d30-83ea-ee6a231b2bda.json  cdd822da-3641-44b4-afeb-786c9b6fce98.json  e4072fe1-b508-4010-a6bb-15eabea652c2.json  f07b6e29-209d-4b8b-af50-4c53cf2fbba7.json  f7c5a083-6bde-49a1-9749-7a469afe8a4e.json  fa8c688d-80c4-4108-a083-07d33c8b09c9.json
report_costs_3/: 02a84e53-437e-4044-9670-d0ac464b8391.json  243d2877-7307-4be8-8efb-c51ed9faf024.json  (+8 more)
