[project]
name = "cost-analysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.8",
    "mplhep>=0.4.1",
    "pandas>=2.3.3",
    "xv4-er-contract-resolution-store>=13.0.0,<14",
    "resolution-store>=12.2.0,<13",
]


[[tool.uv.index]]
url = "https://dl.cloudsmith.io/basic/xapien/default/python/simple/"
[[tool.uv.index]]
url = "https://pypi.org/simple"
default = true
